# pyproject.toml
[project]
name = "comfyui-latentclamp" # Unique identifier for your node. Immutable after creation.
description = "A node for ComfyUI that modifies the values in the samples input that fall outside of a min and max range using a multiplier."
version = "0.0.2" # Custom Node version. Must be semantically versioned.
license = { file = "LICENSE.txt" }
dependencies  = [] # Filled in from requirements.txt

[project.urls]
Repository = "https://github.com/SparknightLLC/ComfyUI-LatentClamp"

[tool.comfy]
PublisherId = "sparknight" # TODO (fill in Publisher ID from Comfy Registry Website).
DisplayName = "ComfyUI-LatentClamp" # Display name for the Custom Node. Can be changed later.
Icon = "https://example.com/icon.png" # SVG, PNG, JPG or GIF (MAX. 800x400px)